# tops

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  FindPerlLibs.cmake  FindRmath.cmake  Makefile  README  cmake_install.cmake  net.csv  update_version.pl
app/: CMakeLists.txt  Makefile  align  align.cpp  bayes_classifier  bayes_classifier.cpp  choose_path  choose_path.cpp  cmake_install.cmake  evaluate  evaluate.cpp  fasta_to_tops.pl  gtf_to_states.pl  kullback_positional  kullback_positional.cpp  mea_decoding  mea_decoding.cpp  one_file_model  one_file_model.cpp  posterior_decoding  posterior_decoding.cpp  posterior_probabilities  posterior_probabilities.cpp  predalign  predalign.cpp  print_graph_from_model  print_graph_from_model.cpp  profileHMMtests  profileHMMtests.cpp  remove_invalid_symbols  remove_invalid_symbols.cpp  runAllPredalignTests  runAllPredalignTests.cpp  seq_length.pl  simulate  simulate.cpp  simulateAlignment  simulateAlignment.cpp  sliding_window  sliding_window.cpp  (+29 more)
doc/manual/: alpha-ime.bst  decorators.tex  describing-probabilistic-models.tex  evaluating.tex  input-sequence-formats.tex  installation.tex  introduction.tex  other-applications.tex  plainnat-ime.bst  referencias.bib  simulating.tex  supported-features.tex  tops-design.tex  tops-doc.tex  training-probabilistic-models.tex
doc/tutorial/: referencias.bib  tutorial.tex
examples/: README
examples/bacteria_ghmm/cfg/: Coding.cfg  NonCoding.cfg  coding_duration.cfg  start.cfg  states.cfg  stop.cfg  train_transitions.cfg
examples/bacteria_ghmm/dataset/: train_seq
examples/bacteria_ghmm/model/: coding.txt  coding_duration.txt  ghmm.model  start.txt  stop.txt  target.model
examples/bacteria_ghmm/scripts/: accuracy.pl
examples/bacteria_ghmm/test_set/: path  seq
examples/bayes_cpg/: bayes_classifier.txt  cpg_island_markov_chain.txt  out.txt  sequences.in  uniform_markov_chain.txt
examples/casino_hmm/: .RData  .Rhistory  casino.txt  casino_bw.txt  casino_bw_train.txt  casino_ml.txt  casino_real.txt  casino_reestimated_bw.txt  examples.R  input.txt  observation.seq  output.txt  sequences_from_casino_real.txt  states.sequences  trained.txt  trained_ml.txt
examples/casino_markov_chain/: bayes_classifier.txt  classification.out  honest_dice_markov_chain.txt  loaded_dice_markov_chain.txt  result.acc  sequences.in  sequences_from_honest.txt  sequences_from_loaded.txt
examples/discreteiid/: discreteiid.txt  sequence_from_discreteiid.txt  train.txt  trained_model.txt
examples/hmm/: hmm.R  hmm.txt  hmm_init.txt  sequence_from_hmm.R  sequence_from_hmm.txt  train.txt  trained_model.txt
examples/hmm_cpg/: cpg_island.txt  cpg_island_bw_train.txt  cpg_island_ml_train.txt  in.txt  trainhmm_bw.sequences  trainhmm_bw.sequences~  trainhmm_ml.sequences
examples/neuralnetwork/: neuralnetwork.txt
examples/pairhmm/: blosumPairHMM.txt  hem1.fasta  hem2.fasta  pairHMM.txt  phmm_bw_train.txt  rs1.fasta  rs2.fasta
examples/profile_hmm/: .emiss_20130221T145455.txt  bayes_classifier.txt  emissions_seq.txt  fasta_alignment.txt  init_model_bw.txt  input.txt  profile_config_bw.txt  profile_config_ml.txt  profile_init.model  profile_trained.model  profile_trained_bw.txt  profile_trained_ml.txt  states_seq.txt  train_profilehmm.txt
examples/vlmc/: .Rhistory  sequence_from_vlmc.R  sequence_from_vlmc.txt  train_vlmc.txt  trained_vlmc.txt  vlmc.R  vlmc.txt
examples/wam/: sequences_from_wam.txt  train.txt  trained_model.txt  wam.txt
lang/: CMakeLists.txt  README.md
lang/app/: CMakeLists.txt  parser.cpp
lang/src/: ASTNode.cpp  ASTNode.hpp  CMakeLists.txt  ConditionNode.cpp  ConditionNode.hpp  ConditionalProbabilityMapNode.cpp  ConditionalProbabilityMapNode.hpp  ConditionalProbabilityNode.cpp  ConditionalProbabilityNode.hpp  ConfigurationNode.cpp  ConfigurationNode.hpp  FloatNode.cpp  FloatNode.hpp  IntegerNode.cpp  IntegerNode.hpp  KeyNode.cpp  KeyNode.hpp  ListNode.cpp  ListNode.hpp  Makefile  ProbabilityMapNode.cpp  ProbabilityMapNode.hpp  ProbabilityNode.cpp  ProbabilityNode.hpp  PropertyNode.cpp  PropertyNode.hpp  StringNode.cpp  StringNode.hpp  ToPSLang.hpp  ToPSLangVisitor.cpp  ToPSLangVisitor.hpp  ValueNode.cpp  ValueNode.hpp  generate-parser  lang.cpp  lang.hpp  parser.cpp  parser.hpp  parser.y  tokens.cpp  (+1 more)
lang/test/: CMakeLists.txt  ast_test.cpp  parser_test.cpp
src/: .cproject  .project  AkaikeInformationCriteria.cpp  AkaikeInformationCriteria.hpp  Alphabet.cpp  Alphabet.hpp  BayesianInformationCriteria.cpp  BayesianInformationCriteria.hpp  BernoulliModelCreator.cpp  BernoulliModelCreator.hpp  CMakeLists.txt  CMakeLists.txt~  ChiSquare.cpp  ChiSquare.hpp  ConfigurationReader.cpp  ConfigurationReader.hpp  Consensus.cpp  Consensus.hpp  ContextTree.cpp  ContextTree.hpp  DecodableModel.cpp  DecodableModel.hpp  DegenerateDistribution.hpp  DiscreteIIDModel.cpp  DiscreteIIDModel.hpp  DiscreteIIDModelCreateModel.cpp  DiscreteIIDModelCreator.cpp  DiscreteIIDModelCreator.hpp  FactorableModel.cpp  FactorableModel.hpp  FactorableModelPrefixSumArray.cpp  FactorableModelPrefixSumArray.hpp  FiniteDiscreteDistribution.cpp  FiniteDiscreteDistribution.hpp  FiniteDiscreteDistributionCreateModel.cpp  FiniteDiscreteDistributionCreator.cpp  FiniteDiscreteDistributionCreator.hpp  FixedSequenceAtPosition.cpp  FixedSequenceAtPosition.hpp  FixedSequenceAtPositionCreator.cpp  (+157 more)
tops-R-package/: DESCRIPTION  Makevars
tops-R-package/R/: evaluate.R  load_model.R  save_model.R  simulate.R  train_model.R  viterbi.R  zzz.R
tops-R-package/man/: tops.Rd  tops_evaluate.Rd  tops_load.Rd  tops_save.Rd  tops_simulate.Rd  tops_train.Rd  tops_viterbi.Rd
tops-R-package/src/: Makevars  ProbabilisticModelParameterAdapter.cpp  ProbabilisticModelParameterAdapter.hpp  ToPSWrapperClient.cpp  ToPSWrapperClient.hpp  evaluate.cpp  load_model.cpp  save_model.cpp  simulate.cpp  tops.cpp  tops.h  tops_to_R.cpp  tops_to_R.hpp  train.cpp  viterbi.cpp
