INCLUDE_DIRECTORIES( ${ToPS_SOURCE_DIR}/src )

IF(UNIX)
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
  INCLUDE_DIRECTORIES( ${RMATH_INCLUDE_DIR} )
ENDIF(UNIX)

IF(WIN32)
  ADD_DEFINITIONS(-DWIN32)
  SET(APP_DEP ToPS)
ENDIF(WIN32)

IF(UNIX)
  SET(APP_DEP ToPS ${BOOST_REGEX_LIBRARY} ${RMATH_LIBRARY} ${BOOST_PROGRAM_OPTIONS_LIBRARY})
ENDIF(UNIX)

ADD_EXECUTABLE(tops-train tops-train.cpp)
ADD_EXECUTABLE(tops-viterbi_decoding tops-viterbi_decoding.cpp)
ADD_EXECUTABLE(tops-mea_decoding tops-mea_decoding.cpp)
ADD_EXECUTABLE(tops-simulate tops-simulate.cpp)
ADD_EXECUTABLE(tops-bayes_classifier tops-bayes_classifier.cpp)
ADD_EXECUTABLE(tops-one_file_model tops-one_file_model.cpp)
ADD_EXECUTABLE(tops-sliding_window tops-sliding_window.cpp)
ADD_EXECUTABLE(tops-test_read_seq tops-test_read_seq.cpp)
ADD_EXECUTABLE(tops-evaluate tops-evaluate.cpp)
ADD_EXECUTABLE(tops-kullback_positional tops-kullback_positional.cpp)
ADD_EXECUTABLE(tops-posterior_probabilities tops-posterior_probabilities.cpp)
ADD_EXECUTABLE(tops-posterior_decoding tops-posterior_decoding.cpp)
ADD_EXECUTABLE(tops-choose_path tops-choose_path.cpp)
ADD_EXECUTABLE(tops-remove_invalid_symbols tops-remove_invalid_symbols.cpp)
ADD_EXECUTABLE(tops-simulateAlignment tops-simulateAlignment.cpp)
ADD_EXECUTABLE(tops-align tops-align.cpp)
ADD_EXECUTABLE(tops-testeFBGHMM tops-testeFBGHMM.cpp)
ADD_EXECUTABLE(tops-testeGPHMM tops-testeGPHMM.cpp)
ADD_EXECUTABLE(tops-predalign tops-predalign.cpp)
ADD_EXECUTABLE(tops-runAllPredalignTests tops-runAllPredalignTests.cpp)
ADD_EXECUTABLE(tops-print_graph_from_model tops-print_graph_from_model.cpp)
ADD_EXECUTABLE(tops-profileHMMtests tops-profileHMMtests.cpp)
ADD_EXECUTABLE(tops-teste_mdd tops-teste_mdd.cpp)

TARGET_LINK_LIBRARIES(tops-evaluate ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-train ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-test_read_seq ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-one_file_model ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-viterbi_decoding ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-mea_decoding ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-simulate ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-bayes_classifier ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-sliding_window ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-kullback_positional ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-posterior_probabilities ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-posterior_decoding ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-choose_path ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-remove_invalid_symbols ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-simulateAlignment ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-align ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-testeFBGHMM ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-testeGPHMM ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-predalign ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-runAllPredalignTests ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-posterior_decoding ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-print_graph_from_model ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-profileHMMtests ${APP_DEP} )
TARGET_LINK_LIBRARIES(tops-teste_mdd ${APP_DEP} )

install(TARGETS tops-train tops-viterbi_decoding tops-mea_decoding tops-simulate tops-testeFBGHMM tops-testeGPHMM tops-simulateAlignment tops-align tops-predalign tops-runAllPredalignTests tops-bayes_classifier tops-one_file_model tops-sliding_window tops-evaluate tops-kullback_positional tops-posterior_probabilities tops-posterior_decoding tops-print_graph_from_model tops-profileHMMtests
       RUNTIME DESTINATION bin
       LIBRARY DESTINATION lib
       ARCHIVE DESTINATION lib/static)
